name:                dirty-miso
version:             0.1.0.0
author:              David Johnson
maintainer:          djohnson.m@gmail.com
build-type:          Simple
cabal-version:       >=1.10
                    
executable example
  main-is: Example.hs
  ghc-options: -Wall
  hs-source-dirs: src
  build-depends: base, dirty-miso, ghcjs-base, containers, ghcjs-dom, text, aeson, elerea
  default-language:    Haskell2010

library
  exposed-modules: Miso, Miso.Types
  ghc-options: -Wall
  hs-source-dirs: src
  build-depends:   base
                 , aeson
                 , containers
                 , elerea
                 , ghcjs-base
                 , ghcjs-dom
                 , text
                 , transformers
  default-language:    Haskell2010