name:                dirty-miso
version:             0.1.0.0
author:              David Johnson
maintainer:          djohnson.m@gmail.com
build-type:          Simple
cabal-version:       >=1.10
                    
executable example
  main-is: Example.hs
  ghc-options: -Wall
  hs-source-dirs: src
  build-depends: aeson
               , base
               , bytestring
               , containers
               , dirty-miso
               , elerea
               , free
               , free
               , ghcjs-base
               , ghcjs-dom
               , lens
               , scientific
               , string-conversions
               , text
  default-language:    Haskell2010

library
  exposed-modules: Miso, Miso.Types
  ghc-options: -Wall
  hs-source-dirs: src
  build-depends:   aeson
                 , base
                 , bytestring
                 , containers
                 , elerea
                 , free
                 , free
                 , ghcjs-base
                 , ghcjs-dom
                 , scientific
                 , string-conversions
                 , text
                 , transformers
  default-language:    Haskell2010