cabal-version:       2.2
name:                miso-examples
version:             1.9.0.0
category:            Web, Miso, Data Structures
author:              David M. Johnson <code@dmj.io>
maintainer:          David M. Johnson <code@dmj.io>
homepage:            http://github.com/dmjio/miso
copyright:           Copyright (c) 2016-2025 David M. Johnson
bug-reports:         https://github.com/dmjio/miso/issues
build-type:          Simple
synopsis:            A tasty Haskell front-end web framework
description:         Examples for miso
license:             BSD-3-Clause
license-file:        LICENSE

extra-source-files:
  mario/imgs/mario.png

common common-options
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall
  if impl(ghcjs) || arch(javascript)
    cpp-options:
      -DGHCJS_BOTH
  if impl(ghcjs)
    cpp-options:
      -DGHCJS_OLD
  elif arch(javascript)
    cpp-options:
      -DGHCJS_NEW
  elif arch(wasm32)
    cpp-options:
      -DWASM
  else
    cpp-options:
      -DNATIVE

common js-only
  if arch(wasm32) || !(impl(ghcjs) || arch(javascript))
     buildable: False

executable components
  import:
    common-options
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    components
  build-depends:
    aeson,
    base < 5,
    containers,
    miso,
    mtl,
    transformers

executable simple
  import:
    common-options
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    simple
  build-depends:
    aeson,
    base < 5,
    containers,
    miso,
    mtl,
    transformers

executable todo-mvc
  import:
    common-options
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    todo-mvc
  build-depends:
    aeson,
    base < 5,
    containers,
    miso,
    mtl,
    transformers

executable threejs
  import:
    common-options, js-only
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    three
  build-depends:
    aeson,
    base < 5,
    containers,
    jsaddle,
    miso

executable file-reader
  import:
    common-options
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    file-reader
  build-depends:
    aeson,
    base < 5,
    containers,
    jsaddle,
    miso,
    mtl

executable fetch
  import:
    common-options
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    fetch
  build-depends:
    aeson,
    base < 5,
    containers,
    jsaddle,
    miso,
    mtl,
    servant,
    servant-client-js

executable canvas2d
  import:
    common-options
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    canvas2d
  build-depends:
    aeson,
    base < 5,
    jsaddle,
    miso,
    mtl

executable router
  import:
    common-options
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    router
  build-depends:
    aeson,
    base < 5,
    containers,
    miso,
    mtl,
    servant,
    transformers

executable websocket
  import:
    common-options
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    websocket
  build-depends:
    aeson,
    base < 5,
    containers,
    miso,
    mtl,
    transformers

executable mario
  import:
    common-options
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    mario
  build-depends:
    base < 5,
    containers,
    miso,
    mtl

executable mathml
  import:
    common-options
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    mathml
  build-depends:
    base < 5,
    miso

executable svg
  import:
    common-options
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  cpp-options:
    -DGHCJS_BROWSER
  hs-source-dirs:
    svg
  build-depends:
    base < 5,
    containers,
    aeson,
    miso,
    mtl
