name:                miso-html
version:             0.1.0.0
author:              David Johnson
maintainer:          djohnson.m@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Miso.Html
  ghc-options: -Wall -Werror
  hs-source-dirs: src
  build-depends:   aeson
                 , base
                 , containers
                 , free
                 , unordered-containers
                 , lucid
                 , mtl
                 , text
                 , vector
  default-language:    Haskell2010
