name:                miso-todomvc
version:             0.1.0.0
author:              David Johnson
maintainer:          djohnson.m@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable todo-mvc
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: miso, miso-html, base, aeson, text, containers
  default-language: Haskell2010
